--- a/client/src/style.css
+++ b/client/src/style.css
@@ -2,6 +2,17 @@
 	padding-top: 20px;
 }
 
+.home-header {
+	position: relative;
+	display: flex;
+	align-items: center;
+}
+
+.home-header .btn {
+	position: absolute;
+	right: 0px;
+}
+
 .card {
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 }
