--- a/client/src/style.css
+++ b/client/src/style.css
@@ -13,6 +13,128 @@
 	right: 0px;
 }
 
+.post-card:hover {
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
 .card {
 	margin-bottom: 20px;
 }
+
+.close {
+	position: absolute;
+	right: 32px;
+	top: 32px;
+	width: 32px;
+	height: 32px;
+	opacity: 0.3;
+}
+.close:hover {
+	opacity: 1;
+}
+.close:before,
+.close:after {
+	position: absolute;
+	left: 15px;
+	content: ' ';
+	height: 33px;
+	width: 2px;
+	background-color: #333;
+}
+.close:before {
+	transform: rotate(45deg);
+}
+.close:after {
+	transform: rotate(-45deg);
+}
+
+.form-wrapper {
+	background-color: #fff;
+	height: 300px;
+	left: 50%;
+	margin: -150px 0 0 -150px;
+	position: absolute;
+	top: 50%;
+	width: 300px;
+}
+
+.input {
+	background-color: transparent;
+	border: none;
+	color: #000;
+	font-family: 'Lato';
+	box-sizing: border-box;
+	position: relative;
+	width: 95%;
+}
+
+.newpost-text {
+	font-size: 18px;
+	font-weight: 400;
+}
+
+.newpost-title {
+	font-size: 40px;
+	font-weight: 600;
+}
+
+.input:focus {
+	outline: none;
+}
+
+input::-webkit-input-placeholder {
+	color: #aaa;
+}
+
+input:focus::-webkit-input-placeholder {
+	color: dodgerblue;
+}
+
+.images {
+	height: 200px;
+	width: 100px;
+	background-color: black;
+}
+
+.loading {
+	position: fixed;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: rgb(0, 0, 0, 0.2);
+}
+
+.indicator {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	font-size: 50px;
+	color: white;
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+}
+
+/* .input:focus + .underline {
+	transform: scale(1);
+}
+
+.underline {
+	background-color: dodgerblue;
+	display: inline-block;
+	height: 2px;
+	left: 50px;
+	margin-top: -4px;
+	position: absolute;
+	top: 185px;
+	-webkit-transform: scale(0, 1);
+	transform: scale(0, 1);
+	-webkit-transition: all 0.5s linear;
+	transition: all 0.5s linear;
+	width: 202px;
+} */
